- [BUG FIX] FX 6.10 based DB_FileMaker_FX class reported error, but it's cause of modified path.
- [BUG FIX] In some case, "the 'NumberFormat' class doesn't exist" message arose, but it was cared in class loader.
- [BUG FIX] Formetter classes didn't work for other than read operations in DB_PDO.
- [BUG FIX] The pagination size popup menu didn't work as we expected.
- [SECURITY FIX] The resetpassword.php in Auth_Support/PasswordReset folder had security issues.
  If you use the resetpassword.php file in your solution. we'd like to replace the fixed version.
- [FYI] The file Samples/sample_memo_html5.html is removed. It wasn't working in long time.

Ver.5.5 (October 13, 2016)
- Support PHP 7 and checking on 7.1.0 Release Candidate 2, too.
- Add "phpseclib_v2" (phpseclib 2.0.3) in "lib" directory for supporting PHP 7.
- Add "Constant-Time Encoding" in "lib" directory for phpseclib 2.0.
  <https://github.com/paragonie/constant_time_encoding>
- In SQL Database, NULL value of date or datetime type fields are falling down zero components data,
  such as 0000-00-00 00:00:00. So the zeros data handles the same as a blank.
- Tests for sample web pages by Selenium Web Driver are introduced.
- The Access-Control-Allow-Origin header can be appended with variable $accessControlAllowOrigin
  in params.php file.
- Update sample_schema_mysql.txt, recipe.rb and sample_spec.rb for the INTER-Mediator-Server VM.
- The getDataAtLastRecord(key) method in IMLibContext class is added.
- The setValue method of IMLibContext class returns affected node's id attribute values.
- If nullable and numeric field is updated/created with "" value, write the value as NULL.
  This behavior requires to set blank in case of updating text field with no string.
- The record to merge an e-mail is retrieved from the database class's instance. This means
  if you want to add/modify fields for e-mail, you can describe codes in advisor classes, but