@@ -86,6 +86,8 @@ Ver.5.6 (in development)
 - [BUG FIX] In some case, "the 'NumberFormat' class doesn't exist" message arose, but it was cared in class loader.
 - [BUG FIX] Formetter classes didn't work for other than read operations in DB_PDO.
 - [BUG FIX] The pagination size popup menu didn't work as we expected.
+- [BUG FIX] On the batch save mode without lock, the update operation didn't work.
+- [BUG FIX] On the batch save mode, the context wasn't updated.
 - [SECURITY FIX] The resetpassword.php in Auth_Support/PasswordReset folder had security issues.
   If you use the resetpassword.php file in your solution. we'd like to replace the fixed version.
 - [FYI] The file Samples/sample_memo_html5.html is removed. It wasn't working in long time.
